Fixed accidental time travel bug